--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
+@import "D:\Practice projects\Angular tutorial\team-generator\node_modules\semantic-ui-css\semantic.css";
