--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1>Team Generator</h1>
     <ul class="list">
       <li *ngFor="let member of members">
-        {{ member }}
+        {{ member | titlecase }}
       </li>
     </ul>
 
@@ -24,14 +24,10 @@
 
   </div>
 
-  <div *ngIf="teams" class="teams-container">
-    <div class="team" *ngFor="let team of teams; index as i;">
-      <h2>Team {{ i + 1 }}</h2>
-      <ul class="list">
-        <li *ngFor="let member of team">
-          {{ member }}
-        </li>
-      </ul>
-    </div>
+  <div *ngIf="teams.length" class="teams-container">
+    <app-team *ngFor="let team of teams; let i = index;" 
+      [team]="team" 
+      [index]="i">
+    </app-team>
   </div>
 </div>
